Visual Studio Upload

--- a/site/style.css
+++ b/site/style.css
@@ -1,29 +1,32 @@
-    body{
+* {
+    box-sizing: border-box;
+}    
+body{
         background-color:#e6bc22;
         font-family: Roboto;
-    }
-    h1{
-        color:#0000ff;
-        font-size: 64px;
-        text-align: center;
-        font-weight: 300;
-        text-transform: capitalize;
-    }
-    h2 {
-        color: #000000;
-        font-size: 32px;
-        text-align: center;
-        text-transform: capitalize;
-    }
-    .red {
-        color: #ff0000;
-    }
-    #content {
-        background-color: white;
-        color: #000000;
-        font-size: 18px;
-        margin: 40px;
-        padding: 20px 20px 20px 20px;
-        border: 10px solid black;
-        text-align: left;
-    }
+}
+h1{
+    color:#0000ff;
+    font-size: 64px;
+    text-align: center;
+    font-weight: 300;
+    text-transform: capitalize;
+}
+h2 {
+    color: #000000;
+    font-size: 32px;
+    text-align: center;
+    text-transform: capitalize;
+}
+.red {
+    color: #ff0000;
+}
+#content {
+    background-color: white;
+    color: #000000;
+    font-size: 18px;
+    margin: 40px;
+    padding: 20px 20px 20px 20px;
+    border: 10px solid black;
+    text-align: left;
+}
