--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -1,9 +1,10 @@
-.row{
-    margin-bottom: 15px;
+.row {
+    margin-bottom: 20px;
 }
 
-.row > div{
-    border: 3px solid #ff0000;
-    background-color: #d3cdcd;
-    text-align: center;
-}
+    .row > div {
+        border: 3px solid #ff0000;
+        background-color: #d3cdcd;
+        text-align: center;
+        font-family: Roboto;
+    }
