--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -1,18 +1,21 @@
 * {
     box-sizing: border-box;
-    font-family:Roboto;
+}
+
+body {
+    font-family: Roboto;
 }
 
 .row {
     width: 100%;
 }
 
-.row > div{
-    background-color: #808080;
-    border: 2px solid #000000;
-}
+    .row > div {
+        background-color: #808080;
+        border: 2px solid #000000;
+    }
 
-h1{
+h1 {
     text-align: center;
 }
 
@@ -126,7 +129,7 @@ h1{
     }
 }
 
-@media (max-width: 767px){
+@media (max-width: 767px) {
     .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
         float: left;
         border: 1px solid green;
