--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 .content {
-    background-color: #808080;
+    background-color: #b4b1b1;
     margin: 10px;
     padding: 50px 10px 10px 10px;
     border: 2px solid black;
